Fixed icon alignment

--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -30,22 +30,51 @@
   margin: 20px 0px;
   @include clearfix;
   img {
+    display: inline-block;
     vertical-align: middle;
     margin-right: 20px;
-    margin-top: 6px;
-    margin-bottom: 50px;
-    float: left;
+  }
+  .helper {
+    display: inline-block;
+    vertical-align: top;
+    max-width: calc(100% - 100px);
+  //  float: left;
+    margin-bottom: 20px;
+    h2 {
+      /* float: left; */
+      max-width: 100%;
+      margin-top: 0px;
+      display: inline-block;
+      vertical-align: top;
+    }
+    p {
+      @include openType(18px);
+      line-height: 30px;
+      max-width: 100%;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      overflow: hidden;
+      display: inline-block;
+      vertical-align: middle;
+
+    }
   }
   h2 {
-    float: left;
-    max-width: calc(100% - 80px);
+    /* float: left; */
+    max-width: calc(100% - 90px);
     margin-top: 10px;
+    display: inline-block;
+    vertical-align: top;
   }
   p {
     @include openType(18px);
     line-height: 30px;
-    float: left;
     max-width: calc(100% - 90px);
     margin-top: 0px;
+    margin-bottom: 0px;
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: middle;
+
   }
 }
